--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      },
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-      "webpack": "3.9.1",
-      "webpack-dev-server": "2.9.5",
-      "babel-loader": "7.1.2"
-    }
+  "name": "",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-loader": "7.1.2",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "3.9.1",
+    "webpack-dev-server": "2.9.5"
   }
-  
+}
