--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack --watch",
+    "serv": "static build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-loader": "7.1.2",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "3.9.1",
-    "webpack-dev-server": "2.9.5"
+    "webpack-dev-server": "2.9.5",
+    "node-static": "0.7.10"
   }
 }
