--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "assets": "webpack",
+    "start": "webpack-dev-server",
+    "build": "webpack",
     "serv": "static build"
   },
   "author": "",
