--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^2.30.1",
+    "node-static": "0.7.10",
     "webpack": "3.9.1",
     "webpack-dev-server": "2.9.5",
-    "node-static": "0.7.10"
+    "webpack-merge": "^4.1.1"
   }
 }
