--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "node-static": "0.7.10",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "webpack": "3.9.1",
     "webpack-dev-server": "2.9.5",
     "webpack-merge": "^4.1.1"
