--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "node-static": "0.7.10",
+    "normalize.css": "^7.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "3.9.1",
