--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.2.1",
     "node-sass": "^4.7.2",
     "node-static": "0.7.10",
     "normalize.css": "^7.0.0",
